fix previous text deployment for clean webpage

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>The South Rhodesian Seacat is a top predator in the underground river of the Molopo and has few natural enemies.</p>
         </section>
         <section id="how-to-help">
-            <h2>How to Help | TEST</h2>
+            <h2>How to Help</h2>
             <p>Conservation efforts are essential for the survival of the South Rhodesian Seacat. You can help by donating to conservation organizations that work to protect the Seacat's habitat and reduce hunting. Additionally, reducing your impact on the environment by using sustainable products and reducing your carbon footprint can help to protect the South Rhodesian Seacat and other endangered species. Link is at the bottom of the disclaimer - please read before donating 😊.</p>
             </section>
         <section id="this-is-a-spoof">
